{
    "name": "Controller",
    "maps": [
        {
            "name": "Controls",
            "id": "17c1a083-38df-40f0-8386-50b79b33bb39",
            "actions": [
                {
                    "name": "Tap",
                    "type": "Button",
                    "id": "efaa2911-e6f2-4c67-9b31-9800fb30bad8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap"
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "94f7f0dd-2666-4ab4-b83b-ce6304b12870",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "7c480904-948b-4ba1-ac29-f332f4e0a718",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PcMovement",
                    "type": "PassThrough",
                    "id": "55d6ff68-5c7f-4182-8d3f-f71df2d594ef",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6e9f3ecc-65de-4ad1-b3a9-588ab4129bf8",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Arrows",
                    "id": "cf0267b6-2779-48d5-84f3-eaccccac3ae7",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PcMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "c66c94ff-4ce5-40a0-986f-57158928a332",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PcMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "8b95ea7d-2849-4c58-8821-b429a2ce91dc",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PcMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "45290c04-98cb-42c7-9094-7f7b3f7109b5",
                    "path": "<Touchscreen>/primaryTouch/tap",
                    "interactions": "Tap",
                    "processors": "",
                    "groups": "",
                    "action": "Tap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f8642ce8-5b4f-40b9-b83c-458c742e6460",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}